# nemac-de

./: .gitignore  README.md  installer.sh  nemac  nemac-dev  nemac-diagnose.sh
calculator/: CMakeLists.txt  main.cpp
calculator/debian/: changelog  control  copyright
core/: CMakeLists.txt
core/chotkeys/: application.cpp  hotkeys.cpp
core/clipboard/: CMakeLists.txt  clipboard.cpp
core/debian/: changelog  control  copyright  postinst  prerm
core/gmenuproxy/: CMakeLists.txt
core/notificationd/: CMakeLists.txt  notificationserver.cpp  notificationsmodel.cpp
core/polkit-agent/: CMakeLists.txt
core/sddm-helper/: CMakeLists.txt  com.nemac.sddm.helper.pkexec.policy.in  main.cpp
core/session/: CMakeLists.txt  application.cpp  application.h  com.nemac.Session.xml  kwinscripts.cpp  kwinscripts.h  main.cpp  nemac-xsession.desktop  networkproxymanager.cpp  processmanager.cpp  processmanager.h
core/settings-daemon/: CMakeLists.txt  application.cpp  application.h
core/shutdown-ui/: CMakeLists.txt
dock/: CMakeLists.txt
filemanager/: CMakeLists.txt
kwin-plugins/: CMakeLists.txt
launcher/: CMakeLists.txt
libnemac/: CMakeLists.txt
nemacui/: CMakeLists.txt
qt-plugins/: CMakeLists.txt
screenlocker/: CMakeLists.txt
screenshot/: CMakeLists.txt  nemac-screenshot.desktop
sddm-theme/: CMakeLists.txt  Main.qml  NemacUIMenu.qml  NemacUIMenuItem.qml  README.md  SessionMenu.qml  UserView.qml  sddm.conf
settings/: CMakeLists.txt
statusbar/: CMakeLists.txt
terminal/: CMakeLists.txt
texteditor/: CMakeLists.txt  nemac-editor.desktop
(+162 files in other folders)
